// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API API/Resources/Subjects should be possible to add filters to a resource 1`] = `
Object {
  "data": undefined,
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Accept-Language": "nl-BE, nl;q=0.5",
    "Authorization": "Bearer rMOUIcH85oh44KD7RM4XRk7jFPiG8RMLi2IPqFsQ",
  },
  "method": "get",
  "params": Object {
    "schedulable_with_contact": "1,2",
  },
  "url": "https://api.example.com/subjects/1",
}
`;

exports[`API API/Resources/Subjects should be possible to add includes to the a single subject 1`] = `
Object {
  "data": undefined,
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Accept-Language": "nl-BE, nl;q=0.5",
    "Authorization": "Bearer rMOUIcH85oh44KD7RM4XRk7jFPiG8RMLi2IPqFsQ",
  },
  "method": "get",
  "params": Object {
    "include": "questions,subject_category",
  },
  "url": "https://api.example.com/subjects/1",
}
`;

exports[`API API/Resources/Subjects should be possible to add includes to the subjects collection 1`] = `
Object {
  "data": undefined,
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Accept-Language": "nl-BE, nl;q=0.5",
    "Authorization": "Bearer rMOUIcH85oh44KD7RM4XRk7jFPiG8RMLi2IPqFsQ",
  },
  "method": "get",
  "params": Object {
    "include": "questions,subject_category",
  },
  "url": "https://api.example.com/subjects",
}
`;

exports[`API API/Resources/Subjects should be possible to create a more advanced combination of calls (timetable) 1`] = `
Object {
  "data": undefined,
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Accept-Language": "nl-BE, nl;q=0.5",
    "Authorization": "Bearer rMOUIcH85oh44KD7RM4XRk7jFPiG8RMLi2IPqFsQ",
  },
  "method": "get",
  "params": Object {
    "end": "2017-12-26",
    "office": 1308,
    "start": "2017-12-21",
  },
  "url": "https://api.example.com/subjects/316/timetable",
}
`;

exports[`API API/Resources/Subjects should be possible to make subsequent calls to include to add multiple includes 1`] = `
Object {
  "data": undefined,
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Accept-Language": "nl-BE, nl;q=0.5",
    "Authorization": "Bearer rMOUIcH85oh44KD7RM4XRk7jFPiG8RMLi2IPqFsQ",
  },
  "method": "get",
  "params": Object {
    "include": "questions,subject_category",
  },
  "url": "https://api.example.com/subjects",
}
`;

exports[`API API/Resources/Subjects should be possible to merge filters with the same name 1`] = `
Object {
  "data": undefined,
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Accept-Language": "nl-BE, nl;q=0.5",
    "Authorization": "Bearer rMOUIcH85oh44KD7RM4XRk7jFPiG8RMLi2IPqFsQ",
  },
  "method": "get",
  "params": Object {
    "schedulable_with_contact": "1,2,3",
  },
  "url": "https://api.example.com/subjects/1",
}
`;

exports[`API API/Resources/Subjects should be possible to request a single subject 1`] = `
Object {
  "data": undefined,
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Accept-Language": "nl-BE, nl;q=0.5",
    "Authorization": "Bearer rMOUIcH85oh44KD7RM4XRk7jFPiG8RMLi2IPqFsQ",
  },
  "method": "get",
  "params": undefined,
  "url": "https://api.example.com/subjects/1",
}
`;

exports[`API API/Resources/Subjects should be possible to request a subjects collection 1`] = `
Object {
  "data": undefined,
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Accept-Language": "nl-BE, nl;q=0.5",
    "Authorization": "Bearer rMOUIcH85oh44KD7RM4XRk7jFPiG8RMLi2IPqFsQ",
  },
  "method": "get",
  "params": undefined,
  "url": "https://api.example.com/subjects",
}
`;

exports[`API API/Resources/Subjects should be possible to use a shorthand for using external ids 1`] = `
Object {
  "data": undefined,
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Accept-Language": "nl-BE, nl;q=0.5",
    "Authorization": "Bearer rMOUIcH85oh44KD7RM4XRk7jFPiG8RMLi2IPqFsQ",
  },
  "method": "get",
  "params": Object {
    "external_id": "abc123",
  },
  "url": "https://api.example.com/customers",
}
`;

exports[`API API/Resources/Subjects should be possible to use shorthands (timetable) 1`] = `
Object {
  "data": undefined,
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Accept-Language": "nl-BE, nl;q=0.5",
    "Authorization": "Bearer rMOUIcH85oh44KD7RM4XRk7jFPiG8RMLi2IPqFsQ",
  },
  "method": "get",
  "params": Object {
    "end": "2017-12-26",
    "office": 1308,
    "start": "2017-12-21",
  },
  "url": "https://api.example.com/subjects/316/timetable",
}
`;

exports[`API API/Resources/Subjects should be possible to use subresources 1`] = `
Object {
  "data": undefined,
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Accept-Language": "nl-BE, nl;q=0.5",
    "Authorization": "Bearer rMOUIcH85oh44KD7RM4XRk7jFPiG8RMLi2IPqFsQ",
  },
  "method": "get",
  "params": undefined,
  "url": "https://api.example.com/subjects/1/questions",
}
`;

exports[`API API/Resources/Subjects should be possible to use subresources by id and includes 1`] = `
Object {
  "data": undefined,
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Accept-Language": "nl-BE, nl;q=0.5",
    "Authorization": "Bearer rMOUIcH85oh44KD7RM4XRk7jFPiG8RMLi2IPqFsQ",
  },
  "method": "get",
  "params": Object {
    "include": "options",
  },
  "url": "https://api.example.com/subjects/1/questions/2",
}
`;

exports[`API API/Resources/Subjects should be possible to use subresources with its id 1`] = `
Object {
  "data": undefined,
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Accept-Language": "nl-BE, nl;q=0.5",
    "Authorization": "Bearer rMOUIcH85oh44KD7RM4XRk7jFPiG8RMLi2IPqFsQ",
  },
  "method": "get",
  "params": undefined,
  "url": "https://api.example.com/subjects/1/questions/2",
}
`;

exports[`API API/Resources/Subjects should default to true when a filter is given with no value 1`] = `
Object {
  "data": undefined,
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Accept-Language": "nl-BE, nl;q=0.5",
    "Authorization": "Bearer rMOUIcH85oh44KD7RM4XRk7jFPiG8RMLi2IPqFsQ",
  },
  "method": "get",
  "params": Object {
    "schedulable": true,
  },
  "url": "https://api.example.com/subjects/1",
}
`;

exports[`API API/Resources/Subjects should make all the includes unique 1`] = `
Object {
  "data": undefined,
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Accept-Language": "nl-BE, nl;q=0.5",
    "Authorization": "Bearer rMOUIcH85oh44KD7RM4XRk7jFPiG8RMLi2IPqFsQ",
  },
  "method": "get",
  "params": Object {
    "include": "questions,subject_category",
  },
  "url": "https://api.example.com/subjects",
}
`;

exports[`API API/Resources/Subjects should result in a single resource response when using external identifiers 1`] = `
Object {
  "data": Object {
    "external_id": "abc123",
    "id": "123",
  },
  "headers": undefined,
  "meta": undefined,
  "status": 200,
  "warnings": undefined,
}
`;

exports[`API API/Resources/Subjects should throw an error when a subresource is used but no id is provided 1`] = `"You tried to call \`.subjects(/* MISSING IDENTIFIER */).questions()\` but the parent id is missing."`;

exports[`API API/Resources/Subjects should throw an error when a subresource with id is used but no parent id is provided 1`] = `"You tried to call \`.subjects(/* MISSING IDENTIFIER */).questions(123)\` but the parent id is missing."`;

exports[`API API/Resources/Subjects should throw an error when an external://abc123 call returns multiple records 1`] = `[Error: Multiple results found]`;

exports[`API API/Resources/Subjects should throw an error when an external://abc123 call returns multiple records 2`] = `
Array [
  Object {
    "external_id": "abc123",
    "id": "123",
  },
  Object {
    "external_id": "abc123",
    "id": "456",
  },
]
`;

exports[`API API/Resources/Subjects should throw an error when an external://abc123 call returns no records 1`] = `[Error: No results found]`;

exports[`API API/Resources/Subjects should throw an error when an external://abc123 call returns no records 2`] = `Array []`;

exports[`API API/Resources/Subjects should throw an error when calling a non existing filter function 1`] = `"item.nonExistingMethod is not a function. You can only call \`.category_id()\`, \`.external_id()\`, \`.schedulable_at_office()\`, \`.schedulable_with_contact()\` or \`.schedulable()\`."`;

exports[`API API/Resources/Subjects should throw an error when filter did not receive a callback 1`] = `"\`.filter()\` expects a callback, but is given \`.filter(undefined)\`"`;

exports[`API API/Resources/Subjects should throw an error when include is used before the subresource is used 1`] = `"You tried to call \`.questions()\` as a sub resource on \`.subjects(1)\`, but \`.include(\\"subject_category\\")\` was already called and you can not call \`.include()\` before calling a sub resource."`;

exports[`API API/Resources/Subjects should throw an error when include is used before the subresource is used 2`] = `"You tried to call \`.questions(123)\` as a sub resource on \`.subjects(1)\`, but \`.include(\\"subject_category\\")\` was already called and you can not call \`.include()\` before calling a sub resource."`;

exports[`API API/Resources/Subjects should throw an error when including a value that is not defined on the resource 1`] = `"You tried to call \`.include(\\"invalid\\")\` but the only valid includes for subjects are \`questions\`, \`subject_category\`, \`languages\` and \`languages.translations\`."`;

exports[`API API/Resources/Subjects should throw an error when no values are passed for the timetable shorthand 1`] = `"You tried to call .timetable({}) but \`subject\`, \`office\`, \`start\` and \`end\` are required."`;

exports[`API API/Resources/Subjects should throw an error when required props are missing from a shorthand call (timetable) 1`] = `"You tried to call .timetable({\\"subject\\":316,\\"end\\":\\"2017-12-26\\"}) but \`office\` and \`start\` are also required."`;

exports[`API should throw an error when an interceptor is added but it is not a function 1`] = `"You tried to call \`.addResponseInterceptor(null)\` but it must receive a function."`;

exports[`API/Config should throw an error when overriding items on the configuration object directly 1`] = `"Cannot assign to read only property 'locale' of object '#<Object>'"`;

exports[`API/Config should throw an error when overriding the whole config object 1`] = `"You are not allowed to change the configuration object directly. Please use \`.configure({})\` instead."`;
